--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "biome check",
     "lint:fixall": "biome check --write",
     "typecheck": "tsc --noEmit",
-    "test": "npm run typecheck && npm run lint",
+    "test": "npm run typecheck && npm run lint:fixall",
     "preview": "vite preview",
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.0"
