--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@radix-ui/themes": "^3.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.0"
+    "react-router": "^7.1.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
