--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,6 +25,11 @@
     "baseUrl": ".",
     "paths": {
       "@app": ["./src/app"],
+      "@pages/*": ["./src/pages/*"],
+      "@widgets/*": ["./src/widgets/*"],
+      "@features/*": ["./src/features/*"],
+      "@entities/*": ["./src/entities/*"],
+      "@shared/*": ["./src/shared/*"],
     }
   },
   "include": ["src"]
