--- a/biome.json
+++ b/biome.json
@@ -51,7 +51,11 @@
         "noUnusedImports": "error"
       },
       "security": { "noDangerouslySetInnerHtmlWithChildren": "error" },
-      "style": { "noNamespace": "error", "useAsConstAssertion": "error" },
+      "style": {
+        "noNamespace": "error",
+        "useAsConstAssertion": "error",
+        "useSelfClosingElements": "error"
+      },
       "suspicious": {
         "noAsyncPromiseExecutor": "error",
         "noCatchAssign": "error",
