--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router": "^7.1.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@yandex/ymaps3-types": "^1.0.15542062",
     "husky": "^9.1.7",
     "typescript": "^5.7.2",
     "vite": "^6.0.3"
