--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
