--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "@types/lodash": "^4.17.13",
+    "@vanilla-extract/css": "^1.17.0",
+    "@vanilla-extract/recipes": "^0.5.5",
+    "@vanilla-extract/sprinkles": "^1.6.3",
+    "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,10 +32,11 @@
     "@biomejs/biome": "^1.9.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@vanilla-extract/vite-plugin": "^4.0.19",
     "@vitejs/plugin-react": "^4.3.4",
     "@yandex/ymaps3-types": "^1.0.15542062",
     "husky": "^9.1.7",
     "typescript": "^5.7.2",
-    "vite": "^6.0.3"
+    "vite": "^5.4.11"
   }
 }
