--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
+    "recoil": "^0.7.7",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
