--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-router": "^7.2.0",
     "recoil": "^0.7.7",
     "vite-tsconfig-paths": "^5.1.4"
