--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vanilla-extract/recipes": "^0.5.5",
     "@vanilla-extract/sprinkles": "^1.6.3",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
